--- a/src/components/About.css
+++ b/src/components/About.css
@@ -5,7 +5,6 @@
     background-color: white;
     height: 100%;
     width: 100%;
-    margin-top: 59vh;
 }
 
 .aboutDiv h1{
@@ -13,4 +12,74 @@
     width: 100%;
     margin-left: 10%;
     margin-top: 3%;
+    margin-bottom: 1%;
+}
+
+.aboutDiv h1:after{
+    content: "";
+    height: 4px;
+    width: 70px;
+    display: block;
+    background: #80ccff;
+    border-radius: 3px;
+}
+
+.aboutDiv p{
+    font-size: larger;
+    font-weight: 500;
+    text-align: left;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 1%;
+    color: black;
+}
+
+.aboutImage{
+    width: 100%;
+    height: fit-content;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    display: flex;
+}
+
+.aboutImage img{
+    height: 400px;
+    margin-left: 10%;
+    border-radius: 10px;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-right: 10%;
+}
+
+.details h2{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.details h2:after{
+    content: "";
+    height: 4px;
+    width: 100px;
+    display: block;
+    background: #ff5c34;
+    border-radius: 3px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.detailQuestion{
+    display: inline-block;
+    width: 20%;
+    font-weight: 700;
+    font-style: bold;
+}
+
+.detailAnswer{
+    font-weight: 500;
 }
