--- a/src/components/About.css
+++ b/src/components/About.css
@@ -5,6 +5,7 @@
     background-color: white;
     height: 100%;
     width: 100%;
+    border-bottom: 2px solid black;
 }
 
 .aboutDiv h1{
@@ -37,7 +38,7 @@
 .aboutImage{
     width: 100%;
     height: fit-content;
-    margin-top: 3%;
+    margin-top: 5%;
     margin-bottom: 3%;
     display: flex;
 }
@@ -51,14 +52,14 @@
 .details{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 70%;
     margin-right: 10%;
 }
 
 .details h2{
     width: 100%;
     text-align: center;
-    margin-bottom: 2%;
+    margin-bottom: 4%;
 }
 
 .details h2:after{
