--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -23,7 +23,7 @@
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
-    opacity: 0.8;
+    opacity: 1;
 }
 
 .mainDiv{
@@ -48,4 +48,5 @@
     color: white;
     font-size: 2rem;
     font-weight: bold;
+    text-shadow: 0px 0px 5px black;
 }
