--- a/src/components/About.css
+++ b/src/components/About.css
@@ -35,7 +35,7 @@
     color: black;
 }
 
-.aboutImage{
+.aboutSection{
     width: 100%;
     height: fit-content;
     margin-top: 5%;
@@ -43,7 +43,7 @@
     display: flex;
 }
 
-.aboutImage img{
+.aboutSection img{
     height: 400px;
     margin-left: 10%;
     border-radius: 10px;
@@ -83,4 +83,35 @@
 
 .detailAnswer{
     font-weight: 500;
+}
+
+@media screen and (max-width: 768px) {
+    .aboutDiv h1{
+        margin-top: 7%;
+        font-size: 2rem;
+        margin-bottom: 4%;
+    }    
+
+    .aboutSection{
+        flex-direction: column;
+    }
+    .aboutSection img{
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+
+    .details{
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .details h2{
+        margin-top: 7%;
+    }
+    .detailQuestion {
+        display: inline;
+    }
+    .detailAnswer{
+        display: inline;
+    }
 }
