--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.upperNavBar{
+    display: none;
+}
+
 .leftSideBar{
     width: 15%;
     height: 100vh;
@@ -17,6 +21,10 @@
     align-items: center;
     padding: 20px 0;
     z-index: 2;
+}
+
+.hamburgerImginLeftBar{
+    display: none;
 }
 
 .leftSideBar .profileDiv{
@@ -133,7 +141,64 @@
 }
 
 @media screen and (max-width: 768px){
+
+    .hamburgerImg{
+        filter: invert(1);
+        height: 20px;
+        width: 20px;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-left: 4%;
+    }
+
+    .menuBar{
+        height: 100%;
+    }
+    
     .leftSideBar{
         display: none;
+        position: absolute;
+        width: 40%;
+        overflow: hidden;
     }
+
+    @keyframes slideIn {
+        0%{
+            margin-left: -100%;
+        }
+        100%{
+            margin-left: 0;
+        }
+    }
+
+    @keyframes slideOut {
+        0%{
+            margin-left: 0;
+        }
+        100%{
+            margin-left: -100%;
+        }
+    }
+
+    .upperNavBar{
+        height: 5%;
+        width: 100vw;
+        z-index: 2;
+        background-color: #070012;
+        position: absolute;
+        display: flex;
+        top: 0;
+        left: 0;
+    }
+
+    .hamburgerImginLeftBar{
+        display: block;
+        filter: invert(1);
+        margin-left: -70%;
+        margin-top: -10px;
+        height: 20px;
+        width: 20px;
+        top: 0;
+    }
+
 }
